# advent-of-code

./: .gitignore  README.md
.github/workflows/: ci.yaml
advent-of-code-haskell/: .gitignore  README.md  aoc.cabal  stack.yaml
advent-of-code-scala/: .editorconfig  .gitignore  .scalafmt.conf  CREDITS.md  PROGRESS.md  README.md  justfile  project.scala
advent-of-code-scala/docs/: APIs.md
advent-of-code-scala/resources/templates/: dayImpl.hbs  dayTest.hbs  year.hbs
advent-of-code-scala/src/: common.scala
advent-of-code-scala/src/core/control/: Combinators.scala  Combinators.test.scala
advent-of-code-scala/src/core/crypto/: MD5.scala  MD5.test.scala
advent-of-code-scala/src/core/data/: Chromosome.scala  Colour.scala  Edge.scala  FreqMap.scala  Gene.scala  Graph.scala  Grid2D.scala  InfiniteLists.scala  ModuloRing.scala  Seq.scala  UGraph.scala  WGraph.scala
advent-of-code-scala/src/core/data/linear/: V2.scala  V3.scala
advent-of-code-scala/src/core/math/: Finite.scala
advent-of-code-scala/src/core/parser/: prelude.scala
advent-of-code-scala/src/core/search/: graph.scala
advent-of-code-scala/src/core/text/: Input.scala
advent-of-code-scala/src/core/vm/: Intcode.scala
advent-of-code-scala/src/harness/: aocd.scala  date.scala  generate.scala  harness.scala  runnerIO.scala  runnerOpts.scala  stopwatch.scala  templates.scala
advent-of-code-scala/src/solutions/y0000/: README.md  day01.scala  day01.test.scala  y0000.scala
advent-of-code-scala/src/solutions/y2015/: day01.scala  day01.test.scala  day02.scala  day02.test.scala  day03.scala  day03.test.scala  day04.scala  day04.test.scala  day12.scala  day12.test.scala  day16.scala  day18.scala  day18.test.scala  y2015.scala
advent-of-code-scala/src/solutions/y2017/: y2017.scala
advent-of-code-scala/src/solutions/y2019/: y2019.scala
advent-of-code-scala/src/solutions/y2020/: day01.scala  day01.test.scala  day02.scala  day02.test.scala  day03.scala  day03.test.scala  day04.scala  day04.test.scala  y2020.scala
advent-of-code-scala/src/solutions/y2021/: y2021.scala
advent-of-code-scala/src/solutions/y2022/: day01.scala  day01.test.scala  day03.scala  day03.test.scala  day04.scala  day04.test.scala  day05.scala  day05.test.scala  day08.scala  day08.test.scala  day09.scala  day09.test.scala  day10.scala  y2022.scala
advent-of-code-scala/src/solutions/y2023/: day02.scala  day02.test.scala  y2023.scala
advent-of-code-scala/src/solutions/y2024/: day01.scala  day01.test.scala  day02.scala  day02.test.scala  day03.scala  day03.test.scala  y2024.scala
advent-of-code-scala/src/solutions/y2025/: day01.scala  day01.test.scala  day02.scala  day02.test.scala  day03.scala  day03.test.scala  day04.scala  day04.test.scala  day05.scala  day05.test.scala  day06.scala  day06.test.scala  day07.scala  day07.test.scala  day08.scala  day08.test.scala  day09.scala  day09.test.scala  day10.scala  day10.test.scala  day11.scala  day11.test.scala  day12.scala  day12.test.scala  y2025.scala
advent-of-code-scala/src/tools/: create.scala  download.scala
